--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "NODE_OPTIONS='--max_old_space_size=4096' next",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write 'src/**/*.*'",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
     "eslint-config-prettier": "^6.12.0",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "storybook-addon-next-router": "^2.0.4",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
